Bug 1244533 - Pass dragend coordinates down to the content process. r=enndeakin